--- a/PracticeAPI.ipynb
+++ b/PracticeAPI.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "packed-courtesy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "suffering-albert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "historic-freedom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "comprehensive-combining",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +62,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aerial-morrison",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +115,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "exceptional-basement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +126,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "otherwise-loading",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +199,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "flying-passage",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "altered-notification",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +329,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "novel-realtor",
    "metadata": {},
    "outputs": [
     {
@@ -12507,7 +12497,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "accredited-money",
    "metadata": {},
    "outputs": [
     {
@@ -12576,7 +12565,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "verbal-pickup",
    "metadata": {},
    "outputs": [
     {
@@ -16053,7 +16041,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ideal-actress",
    "metadata": {},
    "outputs": [
     {
@@ -16124,7 +16111,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "abstract-draft",
    "metadata": {},
    "outputs": [
     {
@@ -18433,7 +18419,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "better-broadcasting",
    "metadata": {},
    "outputs": [
     {
@@ -18501,7 +18486,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "three-palace",
    "metadata": {},
    "outputs": [
     {
@@ -18568,7 +18552,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "architectural-mentor",
    "metadata": {},
    "outputs": [
     {
@@ -18590,7 +18573,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "upset-vietnamese",
    "metadata": {},
    "outputs": [
     {
@@ -45435,7 +45417,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "powered-auckland",
    "metadata": {},
    "outputs": [
     {
@@ -45468,7 +45449,6 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "comparative-fundamental",
    "metadata": {},
    "outputs": [
     {
@@ -45602,7 +45582,6 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "searching-ceiling",
    "metadata": {
     "scrolled": true
    },
@@ -45800,7 +45779,6 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "developed-award",
    "metadata": {},
    "outputs": [
     {
@@ -45834,7 +45812,6 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "sunset-avatar",
    "metadata": {},
    "outputs": [
     {
@@ -45855,7 +45832,6 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "serial-macintosh",
    "metadata": {},
    "outputs": [
     {
@@ -45967,7 +45943,6 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "joined-range",
    "metadata": {},
    "outputs": [
     {
@@ -46146,7 +46121,6 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "collected-cassette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46156,7 +46130,6 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "outdoor-referral",
    "metadata": {},
    "outputs": [
     {
@@ -46178,7 +46151,6 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "radical-connecticut",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46195,7 +46167,6 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "cognitive-respondent",
    "metadata": {},
    "outputs": [
     {
@@ -47216,7 +47187,6 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "immediate-public",
    "metadata": {},
    "outputs": [
     {
@@ -47237,7 +47207,6 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "pacific-vector",
    "metadata": {},
    "outputs": [
     {
@@ -47258,7 +47227,6 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "sticky-knitting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47268,7 +47236,6 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "verified-cornell",
    "metadata": {},
    "outputs": [
     {
@@ -47390,8 +47357,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Latitude_list = fire_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 148,
-   "id": "taken-fence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47406,7 +47381,6 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "minimal-relationship",
    "metadata": {},
    "outputs": [
     {
@@ -47456,7 +47430,6 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "bridal-impression",
    "metadata": {},
    "outputs": [
     {
@@ -47509,7 +47482,6 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "dangerous-reputation",
    "metadata": {},
    "outputs": [
     {
@@ -47530,7 +47502,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exclusive-stranger",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -47552,7 +47523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
