Added graphs, added markdown heading and summaries

--- a/NASA_wildfire_project_AM.ipynb
+++ b/NASA_wildfire_project_AM.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NASA Wildfire Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,6 +26,13 @@
     "\n",
     "# Import API key\n",
     "#import nasa_api_key"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accessing the API and completing an API pull"
    ]
   },
   {
@@ -70,6 +84,13 @@
     "    \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding Columns for year and month"
    ]
   },
   {
@@ -640,6 +661,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding a column for hemispheres"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -1120,6 +1148,13 @@
    "source": [
     "groupby_hemi_df = fire_df.groupby('Hemisphere')\n",
     "groupby_hemi_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding country data from the latitude and longitude"
    ]
   },
   {
@@ -3660,7 +3695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
