final - typo fixed

--- a/NASA_wildfire_graphs.ipynb
+++ b/NASA_wildfire_graphs.ipynb
@@ -26,7 +26,7 @@
     "**Limitations:**\n",
     "* The EONET data collection began in 2015, so there are only a few years of complete data.\n",
     "* The EONET data pulls from multiple sources but the sources may not be fully representative of worldwide data, thus our data skews towards reporting on United States data.\n",
-    "* The data has no information about the scale or size of the fire nor the economic or enviromental impact.\n",
+    "* The data has no information about the scale or size of the fire nor the economic or environmental impact.\n",
     "\n",
     "\n",
     "*Note 1:  \n",
