adding hemispher table

--- a/etl_Project.ipynb
+++ b/etl_Project.ipynb
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "corporate-friendly",
    "metadata": {},
    "outputs": [],
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "treated-drunk",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,7 @@
        "4  2021      3  Southern Hemisphere          Chile  5 days 05:14:00        1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f85a5403",
    "metadata": {},
    "outputs": [],
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "2742b575",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "1943 343 days 00:00:00  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "a0410965",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1144,7 @@
        "4  EONET_5263 -33.38700  -71.19793          Chile        1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "e8996a23",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
        "4        1  Southern Hemisphere"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "affiliated-reminder",
    "metadata": {},
    "outputs": [],
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "tested-flooring",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "senior-citizen",
    "metadata": {},
    "outputs": [],
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "exterior-companion",
    "metadata": {},
    "outputs": [],
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "id": "moved-luther",
    "metadata": {},
    "outputs": [],
@@ -1311,10 +1311,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "consistent-deficit",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DuplicateTable",
+     "evalue": "relation \"fire_events\" already exists\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDuplicateTable\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-b252ed522d64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m cur.execute(\"\"\"\n\u001b[0m\u001b[1;32m      2\u001b[0m     CREATE TABLE fire_events(\n\u001b[1;32m      3\u001b[0m     \u001b[0mID\u001b[0m \u001b[0mtext\u001b[0m \u001b[0mPRIMARY\u001b[0m \u001b[0mKEY\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mfire_name\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mend_date\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDuplicateTable\u001b[0m: relation \"fire_events\" already exists\n"
+     ]
+    }
+   ],
    "source": [
     "cur.execute(\"\"\"\n",
     "    CREATE TABLE fire_events(\n",
@@ -1331,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "id": "welcome-division",
    "metadata": {},
    "outputs": [],
@@ -1341,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "invisible-premises",
    "metadata": {},
    "outputs": [],
@@ -1357,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "exact-attendance",
    "metadata": {},
    "outputs": [],
@@ -1376,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "abroad-firmware",
    "metadata": {},
    "outputs": [],
@@ -1392,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "reasonable-prerequisite",
    "metadata": {},
    "outputs": [],
@@ -1408,31 +1420,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "emotional-bruce",
+   "cell_type": "markdown",
+   "id": "gothic-little",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UniqueViolation",
-     "evalue": "duplicate key value violates unique constraint \"hemisphere_pkey\"\nDETAIL:  Key (hemi_id)=(0) already exists.\nCONTEXT:  COPY hemisphere, line 2\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUniqueViolation\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-77-a6ea96282b42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# Notice that we don't need the `csv` module.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Skip the header row.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'hemisphere'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUniqueViolation\u001b[0m: duplicate key value violates unique constraint \"hemisphere_pkey\"\nDETAIL:  Key (hemi_id)=(0) already exists.\nCONTEXT:  COPY hemisphere, line 2\n"
-     ]
-    }
-   ],
    "source": [
-    "\n",
-    "with open('hemisphere.csv', 'r') as f:\n",
-    "    # Notice that we don't need the `csv` module.\n",
-    "    next(f) # Skip the header row.\n",
-    "    cur.copy_from(f, 'hemisphere', sep=',')\n",
+    "Using INSERT to add values to hemisphere table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "likely-request",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute('INSERT INTO hemisphere VALUES (%s, %s)', (0, \"Northern Hemisphere\"))\n",
+    "cur.execute('INSERT INTO hemisphere VALUES (%s, %s)', (1, \"Southern Hemisphere\"))\n",
     "\n",
     "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "emotional-bruce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# with open('hemisphere.csv', 'r') as f:\n",
+    "#     # Notice that we don't need the `csv` module.\n",
+    "#     next(f) # Skip the header row.\n",
+    "#     cur.copy_from(f, 'hemisphere', sep=',')\n",
+    "    \n",
+    "# conn.commit()\n"
    ]
   },
   {
