--- a/etl_Project.ipynb
+++ b/etl_Project.ipynb
@@ -1304,7 +1304,7 @@
     "\n",
     "# connecting to fires database\n",
     "\n",
-    "conn = psycopg2.connect(\"host=localhost dbname=fires user=postgres password=CGdspgp472021\")\n",
+    "conn = psycopg2.connect(\"host=localhost dbname=fires user=postgres password=XXXXX\")\n",
     "\n",
     "cur = conn.cursor()"
    ]
