--- a/etl_Project.ipynb
+++ b/etl_Project.ipynb
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "exterior-companion",
    "metadata": {},
    "outputs": [],
@@ -1295,38 +1295,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
+   "id": "5c4a1218",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from postgres_keys import june_password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "moved-luther",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change password as needed!\n",
     "\n",
-    "# connecting to fires database\n",
     "\n",
-    "conn = psycopg2.connect(\"host=localhost dbname=fires user=postgres password=CGdspgp472021\")\n",
+    "#conn = psycopg2.connect(\"host=localhost dbname=fires user=postgres password=XXXX\")\n",
+    "conn = psycopg2.connect(host=\"localhost\", dbname=\"postgres\", user=\"postgres\", password= june_password)\n",
     "\n",
+    "#must turn on autocommit to be able to create a database\n",
+    "conn.autocommit = True\n",
+    "# create a cursor object using the cursor() method\n",
+    "cur = conn.cursor()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "a3ced2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DuplicateDatabase",
+     "evalue": "database \"nasafires\" already exists\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDuplicateDatabase\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-72-7ace81755a66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Database created successfully........\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDuplicateDatabase\u001b[0m: database \"nasafires\" already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "name_database = 'NASAfires'\n",
+    "sql = 'CREATE database '+name_database+';'\n",
+    "\n",
+    "\n",
+    "cur.execute(sql);\n",
+    "print(\"Database created successfully........\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "72e50b58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(host=\"localhost\", dbname=\"nasafires\", user=\"postgres\", password= june_password)\n",
+    "\n",
+    "# create a cursor object using the cursor() method\n",
     "cur = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "id": "consistent-deficit",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "DuplicateTable",
-     "evalue": "relation \"fire_events\" already exists\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDuplicateTable\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-b252ed522d64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m cur.execute(\"\"\"\n\u001b[0m\u001b[1;32m      2\u001b[0m     CREATE TABLE fire_events(\n\u001b[1;32m      3\u001b[0m     \u001b[0mID\u001b[0m \u001b[0mtext\u001b[0m \u001b[0mPRIMARY\u001b[0m \u001b[0mKEY\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mfire_name\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mend_date\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDuplicateTable\u001b[0m: relation \"fire_events\" already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur.execute(\"\"\"\n",
     "    CREATE TABLE fire_events(\n",
@@ -1343,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "id": "welcome-division",
    "metadata": {},
    "outputs": [],
@@ -1353,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "invisible-premises",
    "metadata": {},
    "outputs": [],
@@ -1369,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "exact-attendance",
    "metadata": {},
    "outputs": [],
@@ -1388,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "abroad-firmware",
    "metadata": {},
    "outputs": [],
@@ -1404,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "reasonable-prerequisite",
    "metadata": {},
    "outputs": [],
@@ -1429,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "id": "likely-request",
    "metadata": {},
    "outputs": [],
@@ -1442,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "emotional-bruce",
    "metadata": {},
    "outputs": [],
@@ -1458,8 +1500,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "id": "e973d7f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Northern Hemisphere'), (1, 'Southern Hemisphere')]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute('SELECT * FROM hemisphere;')\n",
+    "cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "e7e71933",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table updated\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute('ALTER TABLE fire_events ALTER COLUMN end_date TYPE TIMESTAMP USING end_date::timestamp without time zone;')\n",
+    "print('Table updated')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "6744741e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "banned-management",
+   "id": "24ae91cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1481,7 +1574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
