--- a/etl_Project.ipynb
+++ b/etl_Project.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "built-maine",
+   "metadata": {},
+   "source": [
+    "In this notebook, we will be cleaning up some data and adding features before creating a database in Postgres.  Once the database is created, some tables and SQL queries will be run."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "724b1cf2",
@@ -152,6 +160,7 @@
     }
    ],
    "source": [
+    "# import the usual and .csv file\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -179,6 +188,7 @@
     }
    ],
    "source": [
+    "# list the columns\n",
     "fire_df.columns"
    ]
   },
@@ -320,6 +330,8 @@
     }
    ],
    "source": [
+    "# .csv file has extra index, so it will be dropped\n",
+    "\n",
     "fire_df.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "fire_df.head()"
    ]
@@ -360,6 +372,14 @@
     "fire_df.loc[1454, 'Hemisphere'] = 'Northern Hemisphere'\n",
     "fire_df.loc[1454, 'Country'] = 'Canada'\n",
     "fire_df.loc[1454]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "thick-found",
+   "metadata": {},
+   "source": [
+    "Because this notebook is for demonstration purposes, we will delete the data where the country column is missing."
    ]
   },
   {
@@ -538,7 +558,9 @@
    "id": "democratic-junior",
    "metadata": {},
    "source": [
-    "**Adding Event Length to Fire Data Frame**"
+    "**Adding Event Length to Fire Data Frame**\n",
+    "\n",
+    "New feature to be added"
    ]
   },
   {
@@ -572,6 +594,7 @@
     }
    ],
    "source": [
+    "# converting dates from objects to datetime\n",
     "fire_df['End Date'] = pd.to_datetime(fire_df['End Date'])\n",
     "fire_df['Event Date'] = pd.to_datetime(fire_df['Event Date'])\n",
     "fire_df.info()"
@@ -721,6 +744,7 @@
     }
    ],
    "source": [
+    "# add event length\n",
     "fire_df['Event Length'] = fire_df['End Date'] - fire_df['Event Date']\n",
     "fire_df.head()"
    ]
@@ -780,7 +804,7 @@
    "source": [
     "fire_df['Hemi ID'] = np.where(fire_df['Hemisphere'] == 'Northern Hemisphere', 0, 1)\n",
     "\n",
-    "#np.where(condition, value if condition is true, value if condition is false)\n",
+    "# np.where(condition, value if condition is true, value if condition is false)\n",
     "# There's more than one way to do this.  .map with a lambda function, possibly Label Encoder"
    ]
   },
@@ -952,11 +976,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating 3 tables\n",
+    "# Creating 2 tables.  3rd table created in SQL\n",
     "\n",
     "fire_subset = pd.DataFrame(fire_df[['ID','Name of Fire', 'End Date', 'Event Date', 'Year', 'Month', 'Event Length']])\n",
-    "country_subset = pd.DataFrame(fire_df[['ID', 'Latitude','Longitude', 'Country', 'Hemi ID']])\n",
-    "hemisphere_subset = pd.DataFrame(fire_df[['Hemi ID', 'Hemisphere']])"
+    "country_subset = pd.DataFrame(fire_df[['ID', 'Latitude','Longitude', 'Country', 'Hemi ID']])"
    ]
   },
   {
@@ -1080,7 +1103,7 @@
    ],
    "source": [
     "# rename columns without spaces\n",
-    "# df.rename(columns={\"A\": \"a\", \"B\": \"c\"})\n",
+    "\n",
     "fire_subset.rename(columns={'Name of Fire':'fire_name', \n",
     "                            'End Date': 'end_date', \n",
     "                            'Event Date': 'event_date',\n",
@@ -1190,124 +1213,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e8996a23",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Hemi_ID</th>\n",
-       "      <th>Hemisphere</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Northern Hemisphere</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Northern Hemisphere</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Southern Hemisphere</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Northern Hemisphere</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Southern Hemisphere</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Hemi_ID           Hemisphere\n",
-       "0        0  Northern Hemisphere\n",
-       "1        0  Northern Hemisphere\n",
-       "2        1  Southern Hemisphere\n",
-       "3        0  Northern Hemisphere\n",
-       "4        1  Southern Hemisphere"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hemisphere_subset.rename(columns={'Hemi ID': 'Hemi_ID'}, inplace=True)\n",
-    "hemisphere_subset.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "affiliated-editing",
    "metadata": {},
    "source": [
-    "### Create .csv files"
+    "### Create .csv files\n",
+    "\n",
+    "No file needed for hemisphere table.  It will be created in SQL below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "affiliated-reminder",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fire events\n",
+    "# Must use different separator, other than comma due to text fields in the file that include commas\n",
     "fire_subset.to_csv('fire_events.csv', index=False, sep='*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "tested-flooring",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Country information for each event\n",
     "country_subset.to_csv('fire_countries.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "senior-citizen",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Hemisphere subset\n",
-    "hemisphere_subset.to_csv('hemisphere.csv', index=False)"
    ]
   },
   {
@@ -1320,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "9f0c5d6c",
    "metadata": {},
    "outputs": [
@@ -1331,7 +1266,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "exterior-companion",
    "metadata": {},
    "outputs": [],
@@ -1361,17 +1296,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "3f9d1f9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from postgres_keys import june_password"
+    "# saved passwords (in gitignore) read in - two different implementations for different users\n",
+    "# from postgres_keys import june_password\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "import Postgress_Password"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "listed-burton",
+   "metadata": {},
+   "source": [
+    "**Connect to Postgres and Create New Database**\n",
+    "\n",
+    "New database = nasafires\n",
+    "\n",
+    "First we connect to postgres to create the database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "moved-luther",
    "metadata": {},
    "outputs": [
@@ -1391,7 +1343,8 @@
     "#conn = psycopg2.connect(\"host=localhost dbname=fires user=postgres password=XXXXX\")\n",
     "\n",
     "conn = psycopg2.connect(\n",
-    "   database=\"postgres\", user='postgres', password=june_password, host='localhost')\n",
+    "    database=\"postgres\", user='postgres', password=Postgress_Password.postgresPassword, host='localhost')\n",
+    "#   database=\"postgres\", user='postgres', password=june_password, host='localhost')\n",
     "conn.autocommit = True\n",
     "\n",
     "#Creating a cursor object using the cursor() method\n",
@@ -1405,19 +1358,29 @@
     "print(\"Database created successfully........\")\n",
     "\n",
     "#Closing the connection\n",
-    "#conn.close()\n",
-    "\n"
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "duplicate-syria",
+   "metadata": {},
+   "source": [
+    "**Connect to new database - nasafires**\n",
+    "\n",
+    "In nasafires, create fire_events table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "consistent-deficit",
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = psycopg2.connect(\n",
-    "   database=\"nasafires\", user='postgres', password=june_password, host='localhost')\n",
+    "    database=\"nasafires\", user='postgres', password=Postgress_Password.postgresPassword, host='localhost')\n",
+    "   #database=\"nasafires\", user='postgres', password=june_password, host='localhost')\n",
     "cur=conn.cursor()\n",
     "\n",
     "cur.execute(\"\"\"\n",
@@ -1435,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "welcome-division",
    "metadata": {},
    "outputs": [],
@@ -1444,13 +1407,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "former-funeral",
+   "metadata": {},
+   "source": [
+    "In the fire_events table, read in .csv file that has an asterisk as a separator."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "invisible-premises",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "with open('fire_events.csv', 'r') as f:\n",
     "    # Notice that we don't need the `csv` module.\n",
     "    next(f) # Skip the header row.\n",
@@ -1460,8 +1430,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "anonymous-ivory",
+   "metadata": {},
+   "source": [
+    "Create countries table, the read .csv file into the table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "exact-attendance",
    "metadata": {},
    "outputs": [],
@@ -1480,12 +1458,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "abroad-firmware",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# read file into table\n",
     "with open('fire_countries.csv', 'r') as f:\n",
     "    # Notice that we don't need the `csv` module.\n",
     "    next(f) # Skip the header row.\n",
@@ -1495,13 +1473,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "breathing-lunch",
+   "metadata": {},
+   "source": [
+    "Create final table for hemispheres.  Since the table is only two data points, we created it manually."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "reasonable-prerequisite",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "cur.execute(\"\"\"\n",
     "    CREATE TABLE hemisphere(\n",
     "    Hemi_ID int PRIMARY KEY,\n",
@@ -1521,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "likely-request",
    "metadata": {},
    "outputs": [],
@@ -1537,12 +1522,16 @@
    "id": "a5392a5c",
    "metadata": {},
    "source": [
-    "### Change the data type of the end_date column"
+    "### Change the data type of the end_date column\n",
+    "\n",
+    "Changing end_date from text to timestamp without time zome.\n",
+    "\n",
+    "First, create an empty temp column with the timestamp datatype.  Second, copy the end_date as timestamp to the temp column.  Third, write over original column with temp column (notice new timestamp datatype).   Finally, delete temp column."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "banned-management",
    "metadata": {},
    "outputs": [],
@@ -1556,8 +1545,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "equal-aberdeen",
+   "metadata": {},
+   "source": [
+    "Check the datatype of each column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "38e3e2ac",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1570,7 @@
        " ('event_length', 'text')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,20 +1592,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "22628679",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute('''Alter table fire_events\n",
-    "Alter column event_length type interval \n",
-    "USING event_length::interval''')\n",
+    "cur.execute('''ALTER table fire_events\n",
+    "    ALTER column event_length type interval \n",
+    "    USING event_length::interval''')\n",
     "conn.commit()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "raising-dubai",
+   "metadata": {},
+   "source": [
+    "Check datatypes of the fire_events column (found through google)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "087d691c",
    "metadata": {},
    "outputs": [
@@ -1624,21 +1629,37 @@
        " ('event_length', 'interval')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute('''SELECT column_name,data_type \n",
-    "from information_schema.columns \n",
-    "where table_name = 'fire_events';''')\n",
+    "cur.execute('''SELECT column_name, data_type \n",
+    "    FROM information_schema.columns \n",
+    "    WHERE table_name = 'fire_events';''')\n",
     "cur.fetchall()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "compound-powder",
+   "metadata": {},
+   "source": [
+    "### Queries and Joins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "recorded-squad",
+   "metadata": {},
+   "source": [
+    "What are all the fires events in Australia?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "e69e32b3",
    "metadata": {
     "scrolled": true
@@ -1688,38 +1709,46 @@
        " ('Fires in Shoalwater, Queensland, Australia', 'Australia')]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cur.execute('''SELECT f.fire_name, c.country \n",
-    "FROM fire_events as f \n",
-    "JOIN countries as c \n",
-    "ON f.id = c.id\n",
-    "WHERE c.country = 'Australia';''')\n",
+    "    FROM fire_events as f \n",
+    "    JOIN countries as c \n",
+    "    ON f.id = c.id\n",
+    "    WHERE c.country = 'Australia';''')\n",
     "cur.fetchall()\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "automotive-miami",
+   "metadata": {},
+   "source": [
+    "What are the number of fires in Australia?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "2abca371",
    "metadata": {},
    "outputs": [],
    "source": [
     "cur.execute('''SELECT COUNT(f.fire_name)\n",
-    "FROM fire_events as f \n",
-    "JOIN countries as c \n",
-    "ON f.id = c.id\n",
-    "WHERE c.country = 'Australia';''')\n",
+    "    FROM fire_events as f \n",
+    "    JOIN countries as c \n",
+    "    ON f.id = c.id\n",
+    "    WHERE c.country = 'Australia';''')\n",
     "Australia_fires = cur.fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "89326b7f",
    "metadata": {},
    "outputs": [
@@ -1736,8 +1765,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "visible-degree",
+   "metadata": {},
+   "source": [
+    "What are the number fires in the Southern Hemisphere?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "97f1b159",
    "metadata": {},
    "outputs": [
@@ -1751,19 +1788,28 @@
    ],
    "source": [
     "cur.execute('''SELECT COUNT(f.fire_name)\n",
-    "FROM fire_events as f\n",
-    "JOIN countries as c\n",
-    "ON f.id = c.id\n",
-    "JOIN hemisphere as h\n",
-    "ON c.hemi_id = h.hemi_id\n",
-    "WHERE h.hemisphere = 'Southern Hemisphere';''')\n",
+    "    FROM fire_events as f\n",
+    "    JOIN countries as c\n",
+    "    ON f.id = c.id\n",
+    "    JOIN hemisphere as h\n",
+    "    ON c.hemi_id = h.hemi_id\n",
+    "    WHERE h.hemisphere = 'Southern Hemisphere';''')\n",
+    "\n",
     "Southern_hemisphere_fires = cur.fetchall()\n",
     "print('Number of fires in Southern Hemisphere in database: ' , Southern_hemisphere_fires[0][0])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "negative-relations",
+   "metadata": {},
+   "source": [
+    "How many fires are less than 5 days in length?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "80b898e9",
    "metadata": {},
    "outputs": [
@@ -1776,15 +1822,24 @@
     }
    ],
    "source": [
-    "cur.execute('''Select COUNT(id) from fire_events\n",
-    "where event_length < '5 days';''')\n",
+    "cur.execute('''SELECT COUNT(id) FROM fire_events\n",
+    "WHERE event_length < '5 days';''')\n",
+    "\n",
     "five_days = cur.fetchall()\n",
     "print('Number of fires less than five days in database: ' , five_days[0][0])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "coastal-verse",
+   "metadata": {},
+   "source": [
+    "How many fires are in November?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "id": "7ce3eff6",
    "metadata": {},
    "outputs": [
@@ -1797,16 +1852,28 @@
     }
    ],
    "source": [
-    "cur.execute('''Select COUNT(id) from fire_events\n",
-    "where month = 11;''')\n",
+    "cur.execute('''SELECT COUNT(id) FROM fire_events\n",
+    "WHERE month = 11;''')\n",
+    "\n",
     "months = cur.fetchall()\n",
     "print('Number of fires in November in database: ' , months[0][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "d1b5c040",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Closing the connection\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acceptable-victorian",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1828,7 +1895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
