final, minor changes

--- a/ETL_project_final.ipynb
+++ b/ETL_project_final.ipynb
@@ -5,7 +5,9 @@
    "id": "oriented-security",
    "metadata": {},
    "source": [
-    "# ETL Project"
+    "# ETL Project\n",
+    "Extract, Transform, Load\n",
+    "### NASA fire events data"
    ]
   },
   {
@@ -1339,8 +1341,7 @@
     "# Change password as needed!\n",
     "\n",
     "# connecting to fires database\n",
-    "\n",
-    "#conn = psycopg2.connect(\"host=localhost dbname=fires user=postgres password=XXXXX\")\n",
+    "# two different implemenations based on the group project user\n",
     "\n",
     "conn = psycopg2.connect(\n",
     "    database=\"postgres\", user='postgres', password=Postgress_Password.postgresPassword, host='localhost')\n",
@@ -1549,7 +1550,7 @@
    "id": "equal-aberdeen",
    "metadata": {},
    "source": [
-    "Check the datatype of each column"
+    "Check the datatype of each column (found through google)."
    ]
   },
   {
@@ -1654,7 +1655,7 @@
    "id": "recorded-squad",
    "metadata": {},
    "source": [
-    "What are all the fires events in Australia?"
+    "List all the fires events in Australia:"
    ]
   },
   {
@@ -1728,7 +1729,7 @@
    "id": "automotive-miami",
    "metadata": {},
    "source": [
-    "What are the number of fires in Australia?"
+    "What is the number of fires in Australia?"
    ]
   },
   {
@@ -1769,7 +1770,7 @@
    "id": "visible-degree",
    "metadata": {},
    "source": [
-    "What are the number fires in the Southern Hemisphere?"
+    "What is the number of fires in the Southern Hemisphere?"
    ]
   },
   {
