--- a/Final_Project/Stroke_test_notebook.ipynb
+++ b/Final_Project/Stroke_test_notebook.ipynb
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "c5758049",
    "metadata": {},
    "outputs": [
@@ -1112,7 +1112,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "fac13fd2",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1207,7 @@
        "245          Rural              57.93  30.9        Unknown       1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "0fc2e597",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
        "max           271.740000   56.600000     1.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "36e5f0e7",
    "metadata": {},
    "outputs": [
@@ -1512,7 +1512,7 @@
        "max           271.740000    97.600000     1.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "dc69977c",
    "metadata": {},
    "outputs": [
@@ -1545,7 +1545,7 @@
        "Categories (6, object): ['25s' < '35s' < '45s' < '55s' < '65s' < '75s']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "12c1b144",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-18-32593d098072>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-12-32593d098072>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1613,7 +1613,6 @@
        "      <th>bmi</th>\n",
        "      <th>smoking_status</th>\n",
        "      <th>stroke</th>\n",
-       "      <th>age groups</th>\n",
        "      <th>age_groups</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1633,7 +1632,6 @@
        "      <td>formerly smoked</td>\n",
        "      <td>1</td>\n",
        "      <td>65s</td>\n",
-       "      <td>65s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1649,7 +1647,6 @@
        "      <td>NaN</td>\n",
        "      <td>never smoked</td>\n",
        "      <td>1</td>\n",
-       "      <td>55s</td>\n",
        "      <td>55s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1667,7 +1664,6 @@
        "      <td>never smoked</td>\n",
        "      <td>1</td>\n",
        "      <td>75s</td>\n",
-       "      <td>75s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1684,7 +1680,6 @@
        "      <td>smokes</td>\n",
        "      <td>1</td>\n",
        "      <td>45s</td>\n",
-       "      <td>45s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1700,7 +1695,6 @@
        "      <td>24.0</td>\n",
        "      <td>never smoked</td>\n",
        "      <td>1</td>\n",
-       "      <td>75s</td>\n",
        "      <td>75s</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1722,15 +1716,15 @@
        "3        Private          Urban             171.23  34.4           smokes   \n",
        "4  Self-employed          Rural             174.12  24.0     never smoked   \n",
        "\n",
-       "   stroke age groups age_groups  \n",
-       "0       1        65s        65s  \n",
-       "1       1        55s        55s  \n",
-       "2       1        75s        75s  \n",
-       "3       1        45s        45s  \n",
-       "4       1        75s        75s  "
+       "   stroke age_groups  \n",
+       "0       1        65s  \n",
+       "1       1        55s  \n",
+       "2       1        75s  \n",
+       "3       1        45s  \n",
+       "4       1        75s  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "852ff045",
    "metadata": {},
    "outputs": [
@@ -1758,7 +1752,7 @@
        "Name: age_groups, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "c9801110",
    "metadata": {},
    "outputs": [
@@ -1806,7 +1800,6 @@
        "      <th>bmi</th>\n",
        "      <th>smoking_status</th>\n",
        "      <th>stroke</th>\n",
-       "      <th>age groups</th>\n",
        "      <th>age_groups</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1826,7 +1819,6 @@
        "      <td>formerly smoked</td>\n",
        "      <td>1</td>\n",
        "      <td>65s</td>\n",
-       "      <td>65s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1842,7 +1834,6 @@
        "      <td>32.5</td>\n",
        "      <td>never smoked</td>\n",
        "      <td>1</td>\n",
-       "      <td>75s</td>\n",
        "      <td>75s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1860,7 +1851,6 @@
        "      <td>smokes</td>\n",
        "      <td>1</td>\n",
        "      <td>45s</td>\n",
-       "      <td>45s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1876,7 +1866,6 @@
        "      <td>24.0</td>\n",
        "      <td>never smoked</td>\n",
        "      <td>1</td>\n",
-       "      <td>75s</td>\n",
        "      <td>75s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1894,11 +1883,9 @@
        "      <td>formerly smoked</td>\n",
        "      <td>1</td>\n",
        "      <td>75s</td>\n",
-       "      <td>75s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1928,7 +1915,6 @@
        "      <td>never smoked</td>\n",
        "      <td>1</td>\n",
        "      <td>65s</td>\n",
-       "      <td>65s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243</th>\n",
@@ -1944,7 +1930,6 @@
        "      <td>40.5</td>\n",
        "      <td>formerly smoked</td>\n",
        "      <td>1</td>\n",
-       "      <td>65s</td>\n",
        "      <td>65s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1962,7 +1947,6 @@
        "      <td>Unknown</td>\n",
        "      <td>1</td>\n",
        "      <td>55s</td>\n",
-       "      <td>55s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>246</th>\n",
@@ -1978,7 +1962,6 @@
        "      <td>29.3</td>\n",
        "      <td>formerly smoked</td>\n",
        "      <td>1</td>\n",
-       "      <td>65s</td>\n",
        "      <td>65s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1996,11 +1979,10 @@
        "      <td>Unknown</td>\n",
        "      <td>1</td>\n",
        "      <td>75s</td>\n",
-       "      <td>75s</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>208 rows × 14 columns</p>\n",
+       "<p>208 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2030,23 +2012,23 @@
        "246  Self-employed          Rural              78.80  29.3  formerly smoked   \n",
        "248        Private          Rural              78.81  19.6          Unknown   \n",
        "\n",
-       "     stroke age groups age_groups  \n",
-       "0         1        65s        65s  \n",
-       "2         1        75s        75s  \n",
-       "3         1        45s        45s  \n",
-       "4         1        75s        75s  \n",
-       "5         1        75s        75s  \n",
-       "..      ...        ...        ...  \n",
-       "242       1        65s        65s  \n",
-       "243       1        65s        65s  \n",
-       "244       1        55s        55s  \n",
-       "246       1        65s        65s  \n",
-       "248       1        75s        75s  \n",
+       "     stroke age_groups  \n",
+       "0         1        65s  \n",
+       "2         1        75s  \n",
+       "3         1        45s  \n",
+       "4         1        75s  \n",
+       "5         1        75s  \n",
+       "..      ...        ...  \n",
+       "242       1        65s  \n",
+       "243       1        65s  \n",
+       "244       1        55s  \n",
+       "246       1        65s  \n",
+       "248       1        75s  \n",
        "\n",
-       "[208 rows x 14 columns]"
+       "[208 rows x 13 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2058,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "2fe025cb",
    "metadata": {},
    "outputs": [
@@ -2068,7 +2050,7 @@
        "29.9"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2080,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "e089787d",
    "metadata": {},
    "outputs": [
@@ -2090,7 +2072,7 @@
        "34.06666666666667"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2102,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "d24d5afb",
    "metadata": {},
    "outputs": [
@@ -2112,7 +2094,7 @@
        "32.236"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2124,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "452e786b",
    "metadata": {},
    "outputs": [
@@ -2134,7 +2116,7 @@
        "33.17142857142857"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2146,17 +2128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "4016100c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30.798039215686277"
+       "30.79803921568627"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2168,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "25798256",
    "metadata": {},
    "outputs": [
@@ -2178,7 +2160,7 @@
        "27.891250000000003"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2190,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "d1621823",
    "metadata": {},
    "outputs": [
@@ -2201,7 +2183,7 @@
        "Name: bmi, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2212,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "acoustic-trial",
    "metadata": {},
    "outputs": [
@@ -2225,7 +2207,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2236,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "animal-practitioner",
    "metadata": {},
    "outputs": [
@@ -2247,7 +2229,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "brazilian-feedback",
    "metadata": {},
    "outputs": [
@@ -2272,7 +2254,7 @@
        "Name: smoking_status, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "mature-clearing",
    "metadata": {},
    "outputs": [
@@ -2293,7 +2275,7 @@
        "array(['Yes', 'No'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2304,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "increased-traveler",
    "metadata": {},
    "outputs": [
@@ -2316,7 +2298,7 @@
        "Name: ever_married, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2327,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "monthly-printer",
    "metadata": {},
    "outputs": [
@@ -2342,7 +2324,7 @@
        "Name: work_type, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2353,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "mineral-netherlands",
    "metadata": {},
    "outputs": [
@@ -2363,7 +2345,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2386,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "national-format",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2378,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2419,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "heard-simulation",
    "metadata": {},
    "outputs": [
@@ -2429,7 +2411,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2452,7 +2434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "selective-value",
    "metadata": {},
    "outputs": [
@@ -2474,7 +2456,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2485,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "italian-elements",
    "metadata": {},
    "outputs": [
@@ -2497,7 +2479,7 @@
        "Name: Residence_type, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2508,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "engaged-wisconsin",
    "metadata": {},
    "outputs": [
@@ -2575,7 +2557,7 @@
        "3116          Rural             143.33  22.4  formerly smoked       0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2586,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "alike-bundle",
    "metadata": {},
    "outputs": [],
@@ -2596,7 +2578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "material-profile",
    "metadata": {},
    "outputs": [
@@ -2633,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "bored-cache",
    "metadata": {},
    "outputs": [
@@ -2853,7 +2835,7 @@
        "11               0             120.46  36.8               3       1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2876,7 +2858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "listed-soccer",
    "metadata": {},
    "outputs": [],
@@ -2893,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "hungarian-consent",
    "metadata": {},
    "outputs": [],
@@ -2906,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "combined-annotation",
    "metadata": {},
    "outputs": [
@@ -2916,7 +2898,7 @@
        "0.9563977180114099"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2927,7 +2909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "tough-velvet",
    "metadata": {},
    "outputs": [
@@ -2955,7 +2937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "strategic-audience",
    "metadata": {},
    "outputs": [
@@ -2966,7 +2948,7 @@
        "       [ 103,    1]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2977,7 +2959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "positive-float",
    "metadata": {},
    "outputs": [
@@ -2989,7 +2971,7 @@
        "Name: stroke, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3000,7 +2982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "attended-fellow",
    "metadata": {},
    "outputs": [
@@ -3050,7 +3032,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3084,7 +3066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
